# switchboard-cli-demo

./: .gitignore  CMakeLists.txt  README.md  tasks.py
.github/workflows/: build.yml
CMake/: FindSwitchboardSDK.cmake  SwitchboardSDK.cmake
demos/: CMakeLists.txt
demos/silerovad/: CMakeLists.txt  SileroVADExample.json  main.cpp
demos/sine/: CMakeLists.txt  SineExample.json  main.cpp
demos/stt/: CMakeLists.txt  STTExample.json  main.cpp
demos/stt_to_tts/: CMakeLists.txt  STTtoTTSExample.json  main.cpp
demos/tts/: CMakeLists.txt  TTSExample.json  main.cpp
